release 1.6
- Fixed issue 649
  http://java.net/jira/browse/JERSEY-649
  @Path("{id}") not matched for paths containing %2F
  Introduced a new ResourceConfig feature, "com.sun.jersey.api.container.grizzly.AllowEncodedSlashFeature".
  The feature allows to configure Grizzly to enable encoded slashes in URIs
- Fixed issue 576
  http://java.net/jira/browse/JERSEY-576
  Grizzly upgraded to 1.9.31
- JacksonJsonProvider example: added ObjectMapper resolver
  to show how to use Jackon specific configuration options
- Fixed issue 625
  http://java.net/jira/browse/JERSEY-625
  IllegalAccessException when using jersey-server-linking with
  java.* and javax.* field types (unannotated). Excluding these
  from recurive discovery algorithm.
- Adding support for Cobertura based code coverage measurement.
  Use following maven targets to compile, instrument, test and
  generate reports:
    mvn clean install -Dcobertura -Dmaven.test.skip=true
    mvn cobertura:cobertura -Dcobertura
- Fixed issue 643
  http://java.net/jira/browse/JERSEY-643
  Allowing users to use different client implementation in Jersey test
  framework. It might be done by providing ClientFactory and overriding
  method getClientFactory in JerseyTest, which respects priority of
  container provided client OR override getClient() method to gain
  absolute control.
- Provided a workaround for issue 639
  http://java.net/jira/browse/JERSEY-639
  Jersey allows to hack HttpURLConnection class and injects (via reflection)
  HTTP method which will be used to "method" field. This approach disables
  method name control which is used in setMethod method. Users have to set
  URLConnectionClientHandler.PROPERTY_HTTP_URL_CONNECTION_SET_METHOD_WORKAROUND
  property to true to activate this workaround. There is also one know
  limitation - request can't contain entity when this code is executed.
- Jackson dependency upgrade: 1.5.5 -> 1.7.1
- Fixed issue 626
  http://java.net/jira/browse/JERSEY-626